--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,6 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/xoy4axthgbh7/public_html/
-    - /bin/cp -R css $DEPLOYPATH
-    - /bin/cp -R img $DEPLOYPATH
-    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp -R ../invitacion-circe $DEPLOYPATH
