modifying cpanl.yml

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/x0dwyhwm65qw/public_html/
-    - /bin/cp -R ../invitacion-circe $DEPLOYPATH
+    - /bin/cp -R ../invitacion-circe/ $DEPLOYPATH
