modifying cpanel.yml

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/x0dwyhwm65qw/public_html/
-    - /bin/cp -R ../invitacion-circe/ $DEPLOYPATH
+    - /bin/cp -R img $DEPLOYPATH
+    - /bin/cp -R css $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
